Fix overflow

--- a/app/assets/styles/base/_core.scss
+++ b/app/assets/styles/base/_core.scss
@@ -8,6 +8,7 @@ html {
     width: 100%;
     scrollbar-width: auto;
     scrollbar-color: var(--color-text) var(--color-primary);
+    overflow-x: hidden !important;
 }
 
 body {
@@ -15,12 +16,16 @@ body {
     min-height: 100svh;
     @extend %flex-column;
     position: relative;
+}
+
+.page-wrapper {
     overflow-x: hidden;
+    width: 100%;
+    flex: 1;
 }
 
 main {
     background-color: var(--color-secondary);
-    overflow-x: hidden;
 }
 
 section {
